force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/CPQ_Disposition_Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Disposition Quote Line</label>
    <nameField>
        <displayFormat>DQL-{000000}</displayFormat>
        <label>Disposition Quote Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disposition Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>