force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/fields/Arroyo_Subscribed_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Arroyo_Subscribed_Asset_Name__c</fullName>
    <label>Subscribed Asset Name</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>