force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/fields/Arroyo_Subsumed_Old_Contract_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Arroyo_Subsumed_Old_Contract_Line_Items__c</fullName>
    <label>Subsumed_Old_Contract_Line_Items</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>