force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/fields/Disposition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Reason__c</fullName>
    <label>Disposition Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renew Now</fullName>
            </value>
            <value>
                <fullName>Renew Later</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>