force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/fields/PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntryId__c</fullName>
    <label>PricebookEntryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>