force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Disposition Quote Lines</relationshipLabel>
    <relationshipName>Disposition_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>