force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/fields/Renewal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Due_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(RenewedContractLine__r.New_Extended_End_Date__c)),RenewedContractLine__r.New_Extended_End_Date__c + 1,RenewedContractLine__r.EndDate + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Due Date</label>
    <type>Date</type>
</CustomField>