force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/fields/RenewedContractLine__c.field-meta.xml
<CustomField>
    <fullName>RenewedContractLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RenewedContractLine</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Disposition Quote Lines</relationshipLabel>
    <relationshipName>Disposition_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>