force-app/main/default/objects/CPQ_Disposition_Quote_Line__c/fields/Replacement_Detail__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Detail__c</fullName>
    <label>Replacement Detail</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>